<resources>
    <string name="app_name">Trip App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked_by_yaroslav_and_120_others">Liked by Yaroslav and 120 others</string>
    <string name="your_profile">Your Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="example_post_text">Today is a good day to make a post in this social network, this is actually just an example text I write to have some lines of text</string>
    <string name="example_post_username">Yaroslav</string>
    <string name="search_hint">Search…</string>
    <string name="posts">Posts</string>
    <string name="logout">Logout</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Register a new account</string>
    <string name="login_with_existing_account">Login with an existing account</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="success_registration">Successfully registered account</string>
    <string name="error_password_too_short">The password must be at least %d digits long</string>
    <string name="error_username_too_short">The username can\'t have less than %d characters</string>
    <string name="error_username_too_long">The username can\'t have more than %d characters</string>
    <string name="error_not_a_valid_email">Please enter a valid E-Mail</string>
    <string name="error_input_empty">The fields must not be empty</string>
    <string name="error_incorrectly_repeated_password">The passwords do not match</string>
    <string name="error_invalid_credentials">The E-Mail or password is incorrect</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="choose_image">Choose image</string>
    <string name="enter_post_text">Enter post text…</string>
    <string name="post">Post</string>
    <string name="error_invalid_file">The chosen image is invalid</string>
    <string name="username">Username</string>
    <string name="no_description">No Description</string>
    <string name="description">Description</string>
    <string name="update_profile">Update Profile</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="profile_updated">Profile updated</string>
    <string name="no_changes_detected">You didn\'t change anything</string>
    <string name="delete_post_dialog_title">Do you want to delete that post?</string>
    <string name="delete_post_dialog_message">This action cannot be undone.</string>
    <string name="delete_post_dialog_positive">Yes</string>
    <string name="delete_post_dialog_negative">No</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="liked_by_dialog_title">Liked by</string>
    <string name="error_no_image_chosen">Please choose an image for the post</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="comments">Comments</string>
    <string name="create_post">Create post</string>
    <string name="welcome_to_tripapp">Welcome to TripApp</string>
    <string name="login_in_to_continue">Login in to continue</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_coordinates_of_this_place">Enter coordinates of this place</string>
    <string name="add_the_amount_of_money_for_this_trip">Add the amount of money for this trip</string>
    <string name="add_info_about_camping">Add info about camping</string>
    <string name="comment">Comment</string>
    <string name="date">22.04.2021</string>
    <string name="amount_money_for_this_trip">Amount money for this trip</string>
    <string name="info_about_camping">Info about camping</string>
    <string name="post_text">Post text</string>
    <string name="post_image">Post image</string>
    <string name="landmark_recognition">Landmark recognition</string>
    <string name="recognize">Recognize</string>
    <string name="location_name">Location name</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="score">Score</string>
</resources>