<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragmentRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        style="@style/TitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/edit_your_profile"
        app:layout_constraintStart_toStartOf="@+id/titleUsername"
        app:layout_constraintTop_toTopOf="parent" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleUsername"
        style="TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="@+id/titleDescription"
        app:layout_constraintStart_toStartOf="@+id/titleDescription"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:maxLength="12"
            android:maxLines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleDescription"
        style="TextInputLayout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="@+id/btnUpdateProfile"
        app:layout_constraintStart_toStartOf="@+id/btnUpdateProfile"
        app:layout_constraintTop_toBottomOf="@+id/titleUsername"
        app:startIconDrawable="@drawable/ic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDescription"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="15"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="200"
            android:maxLines="4" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpdateProfile"
        style="@style/DarkButtonStyle"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/update_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/settingsProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>